<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/settingcss"
        android:padding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/txt_notifications"
                    android:textColor="#212B35"
                    android:textAlignment="textStart"
                    android:paddingLeft="15dp"
                    android:drawableStart="@drawable/notifications"
                    android:drawablePadding="8dp"
                    android:paddingRight="15dp"
                    app:iconTint="#212B35" />
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D8D8D8"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_langues"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingRight="15dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/txt_langues"
                    android:textAlignment="textStart"
                    android:textColor="#212B35"
                    android:paddingLeft="15dp"
                    android:drawableStart="@drawable/language"
                    android:drawablePadding="8dp"
                    app:iconTint="#212B35" />
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D8D8D8"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_compte"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingRight="15dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/txt_compte"
                    android:textAlignment="textStart"
                    android:textColor="#212B35"
                    android:paddingLeft="15dp"
                    android:drawableStart="@drawable/compte"
                    android:drawablePadding="8dp"
                    app:iconTint="#212B35" />
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D8D8D8"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/butto_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/txt_theme"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="textStart"
                    android:textColor="#212B35"
                    android:drawableStart="@drawable/theme"
                    android:drawablePadding="8dp"
                    app:iconTint="#352122" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/settingcss"
        android:padding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_aide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/txt_aide"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAlignment="textStart"
                    android:textColor="#212B35"
                    android:drawableStart="@drawable/help"
                    android:drawablePadding="8dp"
                    app:iconTint="#212B35" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/settingcss_logout"
        android:padding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/logout"
                    android:paddingRight="15dp"
                    android:textAlignment="textStart"
                    android:textColor="#FA3434"
                    android:drawableStart="@drawable/logout"
                    android:drawablePadding="8dp"
                    android:paddingLeft="15dp"
                    app:iconTint="#FF000D" />
            </TableRow>
        </TableLayout>

    </LinearLayout>



</LinearLayout>